--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,58 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #daf0ff;
+}
+
+.calculator-container {
+  padding: 30px;
+  padding-top: 130px;
+  max-width: 375px;
+  height: 815px;
+  background-color: #f7f8fb;
+  border-radius: 40px;
+  box-shadow: 100px 50px 80px rgba(96, 190, 255, 0.5);
+}
+
+.button {
+  width: 60px;
+  height: 60px;
+  border: none;
+  border-radius: 16px;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+.button_number {
+  background-color: #ffffff;
+  color: #38b9ff;
+  font-weight: bold;
+}
+
+.button_operation {
+  background-color: #ade2ff;
+  color: #109dff;
+  font-weight: normal;
+}
+
+.operation {
+  margin: 0px;
+  margin-right: 33px;
+  max-width: 100%;
+  text-align: right;
+  font-size: 24px;
+  color: #818181;
+}
+
+.result {
+  margin: 0px;
+  margin-right: 18px;
+  max-width: 100%;
+  text-align: right;
+  font-size: 48px;
+  color: #424242;
+  font-weight: bold;
 }
