Change component position

--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
   box-shadow: 100px 50px 80px rgba(96, 190, 255, 0.5);
 }
 
-.buttons-container{
+.buttons-container {
   margin-top: 80px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20px
+  gap: 20px;
 }
 
 .button {
@@ -43,6 +43,12 @@
   background-color: #ade2ff;
   color: #109dff;
   font-weight: normal;
+}
+
+.button_edit {
+  background-color: #ffffff;
+  color: #858585;
+  font-weight: bold;
 }
 
 .operation {
