--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 }
 
 .calculator-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 30px;
   padding-top: 130px;
   max-width: 375px;
@@ -25,6 +28,9 @@
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 60px;
   height: 60px;
   border: none;
@@ -45,10 +51,21 @@
   font-weight: normal;
 }
 
+.button_result {
+  height: 95px;
+  background-color: #ade2ff;
+  color: #109dff;
+  font-weight: normal;
+}
+
 .button_edit {
   background-color: #ffffff;
   color: #858585;
   font-weight: bold;
+}
+
+.icon {
+  width: 60%;
 }
 
 .operation {
@@ -65,6 +82,7 @@
   margin: 0px;
   margin-right: 18px;
   max-width: 100%;
+  height: 64px;
   text-align: right;
   font-size: 48px;
   color: #424242;
