--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,11 @@
   cursor: pointer;
 }
 
+.button:active {
+  border: 1px solid rgb(56, 185, 255, 0.5);
+  box-shadow: 0px 0px 20px rgba(96, 190, 255, 0.8);
+}
+
 .button_number {
   background-color: #ffffff;
   color: #38b9ff;
