--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,27 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 30px;
+  padding-bottom: 30px;
   padding-top: 130px;
   max-width: 375px;
   background-color: #f7f8fb;
   border-radius: 40px;
   box-shadow: 100px 50px 80px rgba(96, 190, 255, 0.5);
+}
+
+.container {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.container_b {
+  max-width: 60%;
+  display: flex;
+  justify-content: start;
+  gap: 20px;
 }
 
 .buttons-container {
@@ -57,7 +72,7 @@
 }
 
 .button_result {
-  height: 95px;
+  height: auto;
   background-color: #ade2ff;
   color: #109dff;
   font-weight: normal;
