--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .calculator-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding-bottom: 30px;
   padding-top: 130px;
   max-width: 375px;
@@ -20,7 +20,6 @@
 }
 
 .container {
-  max-width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -35,9 +34,10 @@
 }
 
 .buttons-container {
-  margin-top: 80px;
+  width: 100%;
+  margin-top: 40px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 20px;
 }
