--- a/src/components/Calculator.module.css
+++ b/src/components/Calculator.module.css
@@ -6,6 +6,7 @@
 }
 
 .calculator__screen {
+  height: 100%;
   text-align: right;
 }
 
@@ -16,6 +17,9 @@
 }
 
 .calculator__result {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
   margin: 0px;
   color: #424242;
   font-size: 48px;
@@ -52,7 +56,7 @@
   justify-content: space-between;
 }
 
-.button {
+.btn {
   display: flex;
   justify-content: center;
   align-items: center;
